@@ -1,4 +1,5 @@
 0.16
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.15 2020-08-19T18:07:59+02:00
